<resources>
    <string name="app_name">JointlyApp</string>
    <string name="tiePassword">Contraseña</string>
    <string name="tvTitleApp">Jointly</string>
    <string name="tieEmail">Email</string>
    <string name="chbRemember">Recuerdame</string>
    <string name="btnSignUp">Registrarse</string>
    <string name="btnSignIn">Iniciar sesión</string>
    <string name="btnGoogle">Google</string>
    <string name="btnFacebook">Facebook</string>
    <string name="tvSignUp">Registro</string>
    <string name="tieUserName">Nombre de usuario</string>
    <string name="tieConfirmPassword">Confirmar contraseña</string>
    <string name="tvNoData">No hay iniciativas</string>
    <string name="profile">Perfil</string>
    <string name="favorite">Favoritos</string>
    <string name="initiative">Iniciativas</string>
    <string name="home">Inicio</string>
    <string name="action_settings">Ajustes</string>
    <string name="contentDescripcion_initiative">Crea una iniciativa</string>
    <string name="tieTitle">Nombre Iniciativa</string>
    <string name="tieDescription">Descripción</string>
    <string name="tieLocation">Localidad</string>
    <string name="tieTargetArea">Area Objetivo</string>
    <string name="tieTargetTime">Hora</string>
    <string name="tieTargetDate">Fecha</string>
    <string name="tieTargetAmount">Cantidad prevista</string>
    <string name="tvDescription">Descripción</string>
    <string name="tvTargetArea">Area objetivo</string>
    <string name="tvUserName">Nombre de usuario</string>
    <string name="btnFollowUser">Siguiendo</string>
    <string name="tvUserEmail">Correo electronico</string>
    <string name="tvUserLocation">Localidad</string>
    <string name="tvUserPhone">Telefono</string>
    <string name="tvInitiativeCreated">Iniciativas Creadas</string>
    <string name="tvInitiativeJoined">Iniciativas Participadas</string>
    <string name="tvUserFollows">Popularidad</string>
    <string name="tvUserDescription">Descripción</string>
    <string name="tvUserInitiativeCreateds">Creadas</string>
    <string name="tvUserCreated">Miembro desde</string>
    <string name="key_user">userEmail</string>
    <string name="key_password">userPassword</string>
    <string name="key_remember">userRemember</string>
    <string name="title_user">Usuario</string>
    <string name="title_password">Contraseña</string>
    <string name="summary_notification">Activar notificaciones</string>
    <string name="title_notification">Notifiaciones</string>
    <string name="key_notification">notification</string>
    <string name="key_ringtone_notification">ringtone</string>
    <string name="summary_ringtone_notification">Sonido notificacion</string>
    <string name="key_account">account</string>
    <string name="summay_account">Datos del usuario</string>
    <string name="title_category_notification">Notificaciones</string>
    <string name="title_ringtone_notification">Tono de notificacion</string>
    <string name="title_category_help">Ayuda</string>
    <string name="summary_category_help">Preguntas frecuentes, contactons, politicas</string>
    <string name="summary_about">Sobre nosotros</string>
    <string name="title_about">Sobre nosotros</string>
    <string name="title_account">Cuenta</string>
    <string name="action_editAccount">Editar cuenta</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="tvUserFollowsFormat">%d te siguen</string>
    <string name="tvUserProfileFollowsFormat">%d siguen a este usuario</string>
    <string name="key_name">userName</string>
    <string name="key_phone">userPhone</string>
    <string name="key_location">userLocation</string>
    <string name="key_description">userDescription</string>
    <string name="title_name">Nombre de usuario</string>
    <string name="title_location">Localidad</string>
    <string name="title_phone">Telefono</string>
    <string name="title_description">Descripcción de usuario</string>
    <string name="title_category_orderlist">Ordenar listados por defecto</string>
    <string name="title_orderby_location">Ordenar por ciudades</string>
    <string name="title_orderby_count_user_joineds">Ordenar por cantidad de usuarios unidos</string>
    <string name="key_orderby_initiative">orderby_initiative</string>
    <string name="summary_orderby_initiative">Filtro a la hora de mostrar las iniciativas</string>
    <string name="title_orderby_initiative">Ordenar iniciativas</string>
    <string name="title_orderby_favorite">Ordenar usuarios favoritos</string>
    <string name="key_orderby_favorite">orderby_favorite</string>
    <string name="summary_orderby_favorite">Filtro a la hora de mostrar usuarios favoritos</string>
    <string name="title_remember">Recordarme</string>
    <string name="summary_remember">Mantiene la seción</string>
    <string name="key_aboutus">aboutus</string>
    <string name="action_order_initiative_by_date">Ordenar por fecha</string>
    <string name="action_order_initiative_by_location">Ordenar por ubicación</string>
    <string name="action_order_initiative_by_users_joined">Ordenar por usuarios unidos</string>
    <string name="action_order_favorite_by_location">Ordenar por ubicación</string>
    <string name="action_order_favorite_by_follows">Ordenar por seguidores</string>
    <string name="action_order_favorite_by_name">Ordenar por nombre</string>
    <string name="tvChatNoData">No ha escrito nadie ningun mensaje</string>
    <string name="tvNoUserData">Se tu el primero en unirte</string>
    <string name="tvNoInitiativeCreatedUserData">Este usuario no ha creado ninguna iniciativa</string>
    <string name="tvNoInitiativeJoinedUserData">Este usuario no hay participado en ninguna iniciativa</string>
    <string name="facebook_application_id" translatable="false">299641768192910</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb299641768192910</string>
    <string name="created">Creados</string>
    <string name="joined">Unidos</string>
    <string name="tvNoDataCreatedInProgress">Crea una iniciativa</string>
    <string name="tvCreatedInProgress">En curso</string>
    <string name="tvCreated">Creados</string>
    <string name="tvCreatedHistory">Historial</string>
    <string name="tvNoDataCreatedHistory">No hay historial de iniciativas creadas</string>
    <string name="tvJoined">Unidos</string>
    <string name="tvJoinedInProgress">En curso</string>
    <string name="tvJoinedHistory">Historial</string>
    <string name="tvNoDataJoinedInProgress">Unete a una iniciativa</string>
    <string name="tvNoDataJoinedHistory">No hay historial de iniciativas unidas</string>
    <string name="refresh_for_sync">Refresca en inicio para sincronizar</string>
    <string name="tvNoConnection">No hay conexion a internet</string>
    <string name="btnExit">Salir</string>
    <string name="undo_user_join">Cancelar</string>
    <string name="join_user_join">Unirme</string>
    <string name="dialog_title_delete_initiative">Eliminando iniciativa</string>
    <string name="dialog_message_delete_initiative">\"Eliminar iniciativa: \"</string>
    <string name="dialog_positive_btn_delete_initiative">Aceptar</string>
    <string name="dialog_negative_btn_delete_initiative">Cancelar</string>
    <string name="menu_item_title_add">Añadir</string>
    <string name="menu_item_title_delete">Eliminar</string>
    <string name="initiative_success_deleted">Iniciativa %s eliminada</string>
    <string name="initiative_success_edited">Iniciativa %s editada</string>
    <string name="initiative_success_created">Iniciativa %s añadida</string>
    <string name="show_initiative_go_to_chat">Acceder al chat</string>
    <string name="add_user_joined">Se ha unido a la iniciativa</string>
    <string name="delete_user_joined">Ha cancelado la participación</string>
    <string name="menu_item_title_edit">Editar</string>
    <string name="tvUserInitiativeJoineds">Unido</string>
    <string name="tvUserInitiative">Iniciativas</string>
    <string name="dialog_alert_info_message_join_initiative">Unirse a una iniciativa significa que te comprometes con ella. En el caso de no poder asistir, porfavor cancela la participación.</string>
    <string name="dialog_title_join_initiative">Información</string>
    <string name="dialog_positive_btn_join_initiative">Aceptar</string>
    <string name="dialog_negative_btn_join_initiative">Cancelar</string>
    <string name="search_initiative">Buscar iniciativa</string>
    <string name="action_search_initiative">Buscar por nombre...</string>
    <string name="dialog_title_qr_initiative">QR</string>
    <string name="dialog_positive_qr">Aceptar</string>
    <string name="dialog_neutral_qr">Volver</string>
    <string name="dialog_negative_qr">Cancelar</string>
    <string name="scanQR">Escanear QR</string>
    <string name="hint_etSendMessage">Opina sobre este usuario...</string>
    <string name="tvRating">Puntuación</string>
    <string name="default_text_small">Hola buenas</string>
    <string name="default_text_large">Hola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buen buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buen buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buen buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buen buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buen buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buen buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenasHola buenas</string>
    <string name="tvTitleReview">Review</string>
    <string name="tvNoReviewData">Tadavía no tiene ninguna review</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success_send_review">Enviado con exito</string>
    <string name="spTitleTargetArea">Selecciona un area</string>
    <string name="spHintTargetArea">Selecciona un area</string>
    <string name="message_permission_galery">Se necesitan los permisos para abrir la galeria</string>
    <string name="message_permission_camare">Se necesitan los permisos para abrir la camara</string>
    <string name="error_qr_camare">\"Error ejecutando la camara \"</string>
    <string name="cancel_qr_lector">Lector QR cancelado</string>
    <string name="error_cancel_qr_lector">ERROR se ha cerrado el lector QR</string>
    <string name="prompt_lector_qr">Escanear código qr de iniciativa</string>
    <string name="key_sync">sync</string>
    <string name="error_auth_failed">Authentication Failed</string>
    <string name="hint_send_message">Escribe un mensaje...</string>
</resources>