<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutInitiatives"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/default_margin_medium"
    android:orientation="vertical"
    app:layout_constraintEnd_toStartOf="@+id/guideline31"
    app:layout_constraintStart_toStartOf="@+id/guideline30"
    app:layout_constraintTop_toBottomOf="@+id/divider3"
    app:layout_constraintBottom_toTopOf="@+id/divider4"
    tools:showIn="@layout/fragment_info">

    <TextView
        style="@style/TextOnPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_medium"
        android:text="@string/tvUserInitiative"
        android:textSize="@dimen/default_text_size_large"
        android:textStyle="bold"/>

    <TextView
        style="@style/SubTextOnSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_medium"
        android:layout_marginTop="@dimen/default_margin_medium"
        android:text="@string/tvUserInitiativeCreateds"
        android:textSize="@dimen/default_text_size_medium"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvNoInitiativeCreatedUserData"
        style="@style/TextOnPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_medium"
        android:text="@string/tvNoInitiativeCreatedUserData"
        android:textSize="@dimen/default_text_size_small"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUserInitiativeCreated"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/default_margin_medium"
        android:focusableInTouchMode="true"/>

    <TextView
        style="@style/SubTextOnSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_medium"
        android:layout_marginTop="@dimen/default_margin_medium"
        android:text="@string/tvUserInitiativeJoineds"
        android:textSize="@dimen/default_text_size_medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNoInitiativeJoinedUserData"
        style="@style/TextOnPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_medium"
        android:text="@string/tvNoInitiativeJoinedUserData"
        android:textSize="@dimen/default_text_size_small"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUserInitiativeJoined"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/default_margin_medium"
        android:focusableInTouchMode="true"/>

</LinearLayout>